crates/formatter/tests/snapshots/snapshots__migrations__000273_workspace_updates.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop type agent_id_name_pair;
