crates/formatter/tests/snapshots/snapshots__migrations__000273_workspace_updates.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type agent_id_name_pair as (id uuid, name text);
