crates/formatter/tests/snapshots/snapshots__migrations__000274_rename_user_link_claims.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table user_links rename column claims to debug_context;

comment on column user_links.debug_context is 'Debug information includes information like id_token and userinfo claims.';
