crates/formatter/tests/snapshots/snapshots__migrations__000274_rename_user_link_claims.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table user_links rename column debug_context to claims;

comment on column user_links.claims is 'Claims from the IDP for the linked user. Includes both id_token and userinfo claims. ';
