crates/formatter/tests/snapshots/snapshots__migrations__000276_workspace_modules.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table workspace_modules;

alter table workspace_resources drop column module_path;
